# tapl-code

./: .gitignore  LICENSE  README.md
ocaml/ch4/: bigstep.ml  smallstep.ml
rust/: Cargo.toml
rust/ch10/: type.rs
rust/ch11/: letexercise.rs
rust/ch4/: bigstep.rs
rust/ch7/: bigstep.rs
