[package]
name = "tapl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "bigstep"
path = "ch4/bigstep.rs"

[[example]]
name = "ch7"
path = "ch7/bigstep.rs"

[[example]]
name = "ch10"
path = "ch10/type.rs"
